# CameramanJohn

./: CMakeLists.txt  README.md  blink  blink.c  faces.csv  faces.txt  main  main.c  makefile  simpletest_raspicam_cv.cpp  small.txt  write_csv  write_csv.c
cmake/: Findraspicam.cmake
